--- a/index.html
+++ b/index.html
@@ -12,20 +12,32 @@
                 <div>
                     <h1 id="name" unselectable="on">_</h1>
                 </div>
-                <a href="javascript:void(0);" id="about" class="mainLink">About</a><br/>
-                <a href="javascript:void(0);" id="skillset" class="mainLink">Skillset</a><br/>
-                <a href="javascript:void(0);" id="experience" class="mainLink">Experience</a><br/>
-                <a href="javascript:void(0);" id="projects" class="mainLink">Projects</a><br/>
-                <a href="javascript:void(0);" id="contact" class="mainLink">Contact</a><br/>
+                <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="about" class="mainLink">About</a><br/>
+                <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="skillset" class="mainLink">Skillset</a><br/>
+                <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="experience" class="mainLink">Experience</a><br/>
+                <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="projects" class="mainLink">Projects</a><br/>
+                <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="contact" class="mainLink">Contact</a><br/>
             </div>
             
-            <div class="right">
+            <div id="content" class="right">
                 
             </div>
 
             <div class="hiddenContent" style="display: none;">
-                <div class="aboutContent">
-                    I'm Jake Demian and I'm 25.
+                <div id="about">
+                    <a href="#">about content</a>
+                </div>
+                <div id="skillset">
+                    skills content
+                </div>
+                <div id="experience">
+                    <h2>exp content</h2>
+                </div>
+                <div id="projects">
+                    projects content
+                </div>
+                <div id="contact">
+                    contact
                 </div>
             </div>
         </div>
