finished bare bones skills page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,112 @@
                     This is where I'll put my About Me stuff.  Uhh, I'm 25, Computer Engineer, etc etc.
                 </div>
                 <div id="skillset">
-                    skills content
+                    <ul class="skillCategoriesList">
+                        <li class="skillCategory">
+                            <h3>Backend</h3>
+                            <ul class="skillsList">
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>Java</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="5"></div>
+                                </li>
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>PHP</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="4"></div>
+                                </li>
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>C++</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="3"></div>
+                                </li>
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>C#</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="3"></div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="skillCategory">
+                            <h3>Frontend</h3>
+                            <ul class="skillsList">
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>Javascript</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="5"></div>
+                                </li>
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>HTML</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="5"></div>
+                                </li>
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>CSS</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="3"></div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="skillCategory">
+                            <h3>Frameworks</h3>
+                            <ul class="skillsList">
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>Angular</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="4"></div>
+                                </li>
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>jQuery</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="4"></div>
+                                </li>
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>React</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="3"></div>
+                                </li>
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>SASS</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="3"></div>
+                                </li>
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>Struts</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="3"></div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="skillCategory">
+                            <h3>Databases</h3>
+                            <ul class="skillsList">
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>MySQL</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="5"></div>
+                                </li>
+                                <li class="skill">
+                                    <div class="skillName">
+                                        <span>DB2</span>
+                                    </div>
+                                    <div class="skill-value" data-skill-value="5"></div>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
                 <div id="experience">
                     <h2>exp content</h2>
