converted everything to jquery and spit shined the ui a bit with some transitions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Jake Demian</title>
         <link rel="stylesheet" type="text/css" href="main.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script type="text/javascript" src="./main.js"></script>
     </head>
     <body>
@@ -39,24 +40,28 @@
                                         <span>Java</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="5"></div>
+                                    <span>5</span>
                                 </li>
                                 <li class="skill">
                                     <div class="skillName">
                                         <span>PHP</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="4"></div>
+                                    <span>4</span>
                                 </li>
                                 <li class="skill">
                                     <div class="skillName">
                                         <span>C++</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="3"></div>
+                                    <span>3</span>
                                 </li>
                                 <li class="skill">
                                     <div class="skillName">
                                         <span>C#</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="3"></div>
+                                    <span>3</span>
                                 </li>
                             </ul>
                         </li>
@@ -68,18 +73,21 @@
                                         <span>Javascript</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="5"></div>
+                                    <span>5</span>
                                 </li>
                                 <li class="skill">
                                     <div class="skillName">
                                         <span>HTML</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="5"></div>
+                                    <span>5</span>
                                 </li>
                                 <li class="skill">
                                     <div class="skillName">
                                         <span>CSS</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="3"></div>
+                                    <span>3</span>
                                 </li>
                             </ul>
                         </li>
@@ -91,30 +99,35 @@
                                         <span>Angular</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="4"></div>
+                                    <span>4</span>
                                 </li>
                                 <li class="skill">
                                     <div class="skillName">
                                         <span>jQuery</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="4"></div>
+                                    <span>4</span>
                                 </li>
                                 <li class="skill">
                                     <div class="skillName">
                                         <span>React</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="3"></div>
+                                    <span>3</span>
                                 </li>
                                 <li class="skill">
                                     <div class="skillName">
                                         <span>SASS</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="3"></div>
+                                    <span>3</span>
                                 </li>
                                 <li class="skill">
                                     <div class="skillName">
                                         <span>Struts</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="3"></div>
+                                    <span>3</span>
                                 </li>
                             </ul>
                         </li>
@@ -126,12 +139,14 @@
                                         <span>MySQL</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="5"></div>
+                                    <span>5</span>
                                 </li>
                                 <li class="skill">
                                     <div class="skillName">
                                         <span>DB2</span>
                                     </div>
                                     <div class="skill-value" data-skill-value="5"></div>
+                                    <span>5</span>
                                 </li>
                             </ul>
                         </li>
