--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
 
             <div class="hiddenContent" style="display: none;">
                 <div id="about">
-                    This is where I'll put my About Me stuff.  Uhh, I'm 25, Computer Engineer, etc etc.
+                    <h2>About</h2>
+                    <p>This is where I'll put my About Me stuff.  Uhh, I'm 25, Computer Engineer, etc etc.</p>
+                    <img class="aboutImg" src="http://i.imgur.com/cM8WTgl.png" width="250px"/>
                 </div>
                 <div id="skillset">
                     <ul class="skillCategoriesList">
                         <li class="skillCategory">
+                            <h2>Skillset</h2>
                             <h3>Backend</h3>
                             <ul class="skillsList">
                                 <li class="skill">
@@ -153,15 +156,31 @@
                     </ul>
                 </div>
                 <div id="experience">
-                    <h2>exp content</h2>
+                    <h2>Experience</h2>
                 </div>
                 <div id="projects">
-                    projects content
+                   <h2>Projects</h2>
                 </div>
                 <div id="contact">
-                    contact
+                    <h2>Contact</h2>
+                    
+                    <p>Interested in working with me?</p>
+                    <p>Feel free to reach out using one of the following contact methods:</p>
+
+                    <br />
+
+                    <h4>E-mail</h4>
+                    <img src="./my_email.png" />
+                    <a class="link" href="javascript:void(0);" onclick="copyEmail();">Copy</a>
+
+                    <h4>Phone (call or text)</h4>
+                    <img src="./my_phone.png" />
+                    <a class="link" href="javascript:void(0);" onclick="copyPhone();">Copy</a>
                 </div>
             </div>
+        </div>
+        <div class="footer">
+            <span>Jake Demian &copy; <script>document.write(new Date().getFullYear());</script></span>
         </div>
     </body>
 </html>
