updated experience page content and jazzed it up with css, updated skillset bar color and style slightly, and removed projects page for now

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                     <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="about" class="mainLink">About</a><br/>
                     <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="skillset" class="mainLink">Skillset</a><br/>
                     <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="experience" class="mainLink">Experience</a><br/>
-                    <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="projects" class="mainLink">Projects</a><br/>
                     <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="contact" class="mainLink">Contact</a><br/>
                 </div>
                 
@@ -166,11 +165,10 @@
                                     <img src="assets/nano_logo.png" width="70px"/>
                                 </div>  
                                 <div class="expDescContainer">
-                                    <p>
-                                        Designed and developed a desktop application that controlled an automated 
-                                        silicon wafer scanning system.  Worked purely in C++ and learned the ropes of 
-                                        working on a large scale project with a team of engineers.
-                                    </p>
+                                    <p>Designed and developed desktop application to control automated silicon wafer inspection system.</p>
+                                    <br />
+                                    <p>Languages used:  C++, Embedded C, MATLAB</p>
+                                    <p>Notable Projects: <a href="http://www.nanotronics.co/technology/" class="link">NSPEC</a></p>
                                 </div>
                             </div>
                         </li>
@@ -182,12 +180,10 @@
                                     <img src="assets/steris_logo.png" width="70px"/>
                                 </div>  
                                 <div class="expDescContainer">
-                                    <p>
-                                        STERIS is an industry leader in the health and medicine industry.  
-                                        I helped design and program both the hardware and software aspects 
-                                        of a new surgical lighting system.  I used Visual Basic for the 
-                                        applications and C++ for the embedded systems programming.
-                                    </p>
+                                    <p>Worked to create a brand new type of surgical lighting system.  Worked with both hardware and softwware.</p>
+                                    <br />
+                                    <p>Languages used:  C++, VB, Embedded C</p>
+                                    <p>Notable Projects: <a href="http://www.steris.com/products/surgical-lights/harmony-led-surgical-lighting-and-visualization-system" class="link">Harmony LED/vLED</a></p>
                                 </div>
                             </div>
                         </li>
@@ -199,38 +195,34 @@
                                     <img src="assets/sapientrazorfish_logo.png" width="70px"/>
                                 </div>  
                                 <div class="expDescContainer">
-                                    <p>
-                                        At SapientRazorfish, I work on creating and maintaining websites for large companies.  
-                                        I design, implement, and maintain the e-commerce backend of both the 
-                                        <a class="link" href="http://www.sherwin-williams.com">Sherwin-Williams</a> 
-                                        and 
-                                        <a class="link" href="http://www.steris.com/healthcare/service-and-service-parts/steris-service-parts/">STERIS Service Parts</a>
-                                        websites.  We use the Websphere Commerce platform, which is a Java-based programming
-                                         stack.  Additionally, I use Angular, Struts, jQuery, and SASS on a regular basis.
-                                    </p>
+                                    <p>Design, implement, and maintain large-scale e-commerce sites using Websphere Commerce.</p>
+                                    <br />
+                                    <p>Languages used:  Java, JavaScript (+Angular, +jQuery), HTML, CSS, DB2 (SQL)</p>
+                                    <p>Notable Projects: <a href="http://www.sherwin-williams.com/" class="link">Sherwin-Williams</a>,
+                                        &nbsp
+                                        <a href="http://www.steris.com/healthcare/service-and-service-parts/steris-service-parts/" class="link">STERIS</a></p>
                                 </div>
                             </div>
                         </li>
                     </ul>
                 </div>
-                <div id="projects">
-                   <h2>Projects</h2>
-                </div>
                 <div id="contact">
                     <h2>Contact</h2>
                     
-                    <p>Interested in working with me?</p>
-                    <p>Feel free to reach out using one of the following contact methods:</p>
+                    <div class="contactContent">
+                        <p>Interested in working with me?</p>
+                        <p>Feel free to reach out using one of the following contact methods:</p>
 
-                    <br />
+                        <br />
 
-                    <h4>E-mail</h4>
-                    <img class="contactImg" src="assets/my_email.png" />
-                    <a class="link" href="javascript:void(0);" onclick="copyEmail();">Copy</a>
+                        <h4>E-mail</h4>
+                        <img class="contactImg" src="assets/my_email.png" />
+                        <a class="link" href="javascript:void(0);" onclick="copyEmail();">Copy</a>
 
-                    <h4>Phone (call or text)</h4>
-                    <img class="contactImg" src="assets/my_phone.png" />
-                    <a class="link" href="javascript:void(0);" onclick="copyPhone();">Copy</a>
+                        <h4>Phone (call or text)</h4>
+                        <img class="contactImg" src="assets/my_phone.png" />
+                        <a class="link" href="javascript:void(0);" onclick="copyPhone();">Copy</a>
+                    </div>
                 </div>
             </div>
         </div>
