made the blinking underscore blue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="mainContent">
                 <div class="left">
                     <div>
-                        <h1 id="name" unselectable="on">_</h1>
+                        <h1 id="name" unselectable="on"><span id="underscore">_</span></h1>
                     </div>
                     <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="about" class="mainLink">About</a><br/>
                     <a href="javascript:void(0);" onclick="javascript:linkClicked(this);" data-link-key="skillset" class="mainLink">Skillset</a><br/>
