edited some text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <h2>About</h2>
                     <div class="aboutMain">
                         <div class="aboutMainLeft">
-                            <p>Nice to meet you!  I am a Software Engineer and Web Developer currently living in Boston, MA.</p>
+                            <p>Nice to meet you!  I'm a Software Engineer and Web Developer currently living in Boston, MA.</p>
                             <p>When I'm not busy programming at work, you'll likely find me programming at home.  I create video 
                                 games, design embedded software systems, and create web and desktop applications for fun!</p>
                         </div>
@@ -222,7 +222,7 @@
                     
                     <div class="contactContent">
                         <p>Interested in working with me?</p>
-                        <p>Feel free to reach out using one of the following contact methods:</p>
+                        <p>Feel free to reach out!</p>
 
                         <br />
 
