improved the copy links

--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
                         <br />
 
                         <h4>E-mail</h4>
-                        <img class="contactImg" src="assets/my_email.png" />
-                        <a class="link" href="javascript:void(0);" onclick="copyEmail();">Copy</a>
+                        <img class="contactImg" src="assets/my_email.png" /><br/>
+                        <a class="copyLink" href="javascript:void(0);" onclick="copyEmail(this);"></a>
 
                         <h4>Phone (call or text)</h4>
-                        <img class="contactImg" src="assets/my_phone.png" />
-                        <a class="link" href="javascript:void(0);" onclick="copyPhone();">Copy</a>
+                        <img class="contactImg" src="assets/my_phone.png" /><br/>
+                        <a class="copyLink" href="javascript:void(0);" onclick="copyPhone(this);"></a>
                     </div>
                 </div>
             </div>
