slight formatting and style changes to experience page

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                     <p>Designed and developed desktop application to control automated silicon wafer inspection system.</p>
                                     <br />
                                     <p>Languages used:  C++, Embedded C, MATLAB</p>
-                                    <p>Notable Projects: <a href="http://www.nanotronics.co/technology/" class="link">NSPEC</a></p>
+                                    <p>Notable Projects: <a href="http://www.nanotronics.co/technology/" target="_blank" class="link">NSPEC</a></p>
                                 </div>
                             </div>
                         </li>
@@ -194,7 +194,7 @@
                                     <p>Worked to create a brand new type of surgical lighting system.  Worked with both hardware and softwware.</p>
                                     <br />
                                     <p>Languages used:  C++, VB, Embedded C</p>
-                                    <p>Notable Projects: <a href="http://www.steris.com/products/surgical-lights/harmony-led-surgical-lighting-and-visualization-system" class="link">Harmony LED/vLED</a></p>
+                                    <p>Notable Projects: <a href="http://www.steris.com/products/surgical-lights/harmony-led-surgical-lighting-and-visualization-system" target="_blank" class="link">Harmony LED/vLED</a></p>
                                 </div>
                             </div>
                         </li>
@@ -209,9 +209,9 @@
                                     <p>Design, implement, and maintain large-scale e-commerce sites using Websphere Commerce.</p>
                                     <br />
                                     <p>Languages used:  Java, JavaScript (+Angular, +jQuery), HTML, CSS, DB2 (SQL)</p>
-                                    <p>Notable Projects: <a href="http://www.sherwin-williams.com/" class="link">Sherwin-Williams</a>,
+                                    <p>Notable Projects: <a href="http://www.sherwin-williams.com/" target="_blank" class="link">Sherwin-Williams</a>,
                                         &nbsp
-                                        <a href="http://www.steris.com/healthcare/service-and-service-parts/steris-service-parts/" class="link">STERIS</a></p>
+                                        <a href="http://www.steris.com/healthcare/service-and-service-parts/steris-service-parts/" target="_blank" class="link">STERIS</a></p>
                                 </div>
                             </div>
                         </li>
