minor styling changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="aboutMain">
                         <div class="aboutMainLeft">
                             <p>Nice to meet you!  I'm a Software Engineer and Web Developer currently living in Boston, MA.</p>
-                            <p>When I'm not busy programming at work, you'll likely find me programming at home.  I create video 
+                            <p>When I'm not busy programming at work, you'll likely find me programming at home. <br/> I create video 
                                 games, design embedded software systems, and create web and desktop applications for fun!</p>
                         </div>
                         <div class="aboutMainRight">
