dded social media links to the footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Jake Demian</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script type="text/javascript" src="./main.js"></script>
     </head>
@@ -210,7 +211,7 @@
                                     <br />
                                     <p>Languages used:  Java, JavaScript (+Angular, +jQuery), HTML, CSS, DB2 (SQL)</p>
                                     <p>Notable Projects: <a href="http://www.sherwin-williams.com/" target="_blank" class="link">Sherwin-Williams</a>,
-                                        &nbsp
+                                        &nbsp;
                                         <a href="http://www.steris.com/healthcare/service-and-service-parts/steris-service-parts/" target="_blank" class="link">STERIS</a></p>
                                 </div>
                             </div>
@@ -238,6 +239,11 @@
             </div>
         </div>
         <div class="footer">
+            <div class="footerLinkContainer">
+                <a class="footerLink" href="https://www.facebook.com/jakedemian" target="_blank"><i class="fa fa-facebook fa-lg"></i></a>
+                <a class="footerLink" href="https://twitter.com/jakedemian" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
+                <a class="footerLink" href="https://www.linkedin.com/in/jacob-demian-5a96799a/" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
+            </div>
             <span>Jake Demian &copy; <script>document.write(new Date().getFullYear());</script></span>
         </div>
     </body>
