--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                 <a class="footerLink" href="https://www.facebook.com/jakedemian" target="_blank"><i class="fa fa-facebook fa-lg"></i></a>
                 <a class="footerLink" href="https://twitter.com/jakedemian" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>
                 <a class="footerLink" href="https://www.linkedin.com/in/jacob-demian-5a96799a/" target="_blank"><i class="fa fa-linkedin fa-lg"></i></a>
+                <a class="footerLink" href="https://github.com/jakedemian" target="_blank"><i class="fa fa-github fa-lg"></i></a>
             </div>
             <span>Jake Demian &copy; <script>document.write(new Date().getFullYear());</script></span>
         </div>
