removed angular usage in the about section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.js"></script>
         <script src="js/app.js"></script>
-        <script src="js/AboutController.js"></script>
         <script src="js/SkillsetController.js"></script>
         <script src="js/ExperienceController.js"></script>
 
@@ -30,9 +29,9 @@
                 <div id="textContent" class="right"></div>
             </div>
 
-            <div class="hiddenContent" style="display: none;" ng-controller="AboutController">
+            <div class="hiddenContent" style="display: none;">
                 <div id="about">
-                    <h2>{{title}}</h2>
+                    <h2>About</h2>
                     <div class="aboutMain">
                         <div class="aboutMainLeft">
                             <p>Nice to meet you!  I'm a Software Engineer and Web Developer currently living in Boston, MA.</p>
